  example for a use).
  
- The "plothover" event is now emitted immediately instead of at most
  10 times per second, you'll have to put in a setTimeout yourself if
  you're doing something really expensive on this event.

- The built-in date formatter can now be accessed as
  $.plot.formatDate(...) (suggestion by Matt Manela) and even
  replaced.

Bug fixes:

- Fixed two corner-case bugs when drawing filled curves (report and
  analysis by Joshua Varner).
- Fix auto-adjustment code when setting min to 0 for an axis where the
  dataset is completely flat on that axis (report by chovy).
- Fixed a bug with passing in data from getData to setData when the
  secondary axes are used (issue 65, reported by nperelman).
- Fixed so that it is possible to turn lines off when no other chart
  type is shown (based on problem reported by Glenn Vanderburg), and
  fixed so that setting lineWidth to 0 also hides the shadow (based on
  problem reported by Sergio Nunes).
- Updated mousemove position expression to the latest from jQuery (bug
  reported by meyuchas).
- Use borders instead of background in legend (fix printing issue 25
  and 45).
- Explicitly convert axis min/max to numbers.
- Fixed a bug with drawing marking lines with different colors
  (reported by Khurram).
- Fixed a bug with returning y2 values in the selection event (fix
  by exists, issue 75).


Flot 0.5
--------

Backwards API change summary: Timestamps are now in UTC. Also
"selected" event -> becomes "plotselected" with new data, the
parameters for setSelection are now different (but backwards
compatibility hooks are in place), coloredAreas becomes markings with
a new interface (but backwards compatibility hooks are in place).


Interactivity: added a new "plothover" event and this and the
"plotclick" event now returns the closest data item (based on patch by
/david, patch by Mark Byers for bar support). See the revamped
"interacting with the data" example for some hints on what you can do.
